--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="contentbox">
             <div class="question"><h2>What do we do?</h2></div>
             <div class="answer">
-                <h3>"Building learning communities with Our Affordable & Competent Courses",
+                <h3>"Building learning is important communities with Our Affordable & Competent Courses",
                 </h3>
             </div>
         </div>
